# 3d-annotation-tool

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  deploy.sh  run_formatting.sh
.github/workflows/: deploy-linux.yml  deploy-osx.yml  deploy.yml  run-tests.yml
apps/: desktop.cc  point_cloud.cc  preview.cc
assets/: disk.ply  x_axis.ply
cmake/: shaders.cmake
include/: asset_utils.h  camera.h  colors.h  eigen.h  glfw_app.h  happly.h  id.h  input.h  label_studio.h  point_cloud_studio.h  scene_model.h  shader_utils.h  studio.h  studio_view.h  texture_utils.h  timeline.h  view_context_3d.h
include/camera/: camera_controls.h
include/commands/: bounding_box.h  command.h  keypoints.h  move_keypoint_command.h  rectangle.h
include/controllers/: annotation_controller.h  controller.h  point_cloud_studio_view_controller.h  point_cloud_view_controller.h  preview_controller.h  studio_view_controller.h
include/geometry/: mesh.h  point_cloud.h  ray_trace_cloud.h  ray_trace_mesh.h
include/model/: point_cloud_dataset.h  rectangle.h
include/tools/: add_keypoint_tool.h  move_keypoint_tool.h  tool.h
include/utils/: dataset.h  serialize.h
include/views/: add_bbox_view.h  add_keypoint_view.h  add_rectangle_view.h  affordance_view.h  annotation_view.h  bbox.h  image_pane.h  mesh_view.h  move_keypoint_view.h  move_tool_view.h  point_cloud_view.h  point_view.h  rectangle_affordances.h  rectangle_view.h  status_bar_view.h  view.h
include/views/controls/: control.h  lookat.h  rotate.h  translate.h
include/window/: glfw_window.h
shaders/bbox/: fs_bbox.sc  varying.def.sc  vs_bbox.sc
shaders/image_pane/: fs_image_pane.sc  varying.def.sc  vs_image_pane.sc
shaders/mesh/: fs_mesh.sc  fs_mesh_colors.sc  fs_mesh_uniform.sc  varying.def.sc  vs_mesh.sc
shaders/point_cloud/: varying.def.sc  vs_point_cloud.sc
shaders/points/: fs_points.sc  varying.def.sc  vs_points.sc
shaders/rectangle/: fs_rectangle.sc  varying.def.sc  vs_rectangle.sc
src/: asset_utils.cc  camera.cc  glfw_app.cc  label_studio.cc  main.cc  point_cloud_studio.cc  scene_model.cc  shader_utils.cc  studio_view.cc  texture_utils.cc  timeline.cc  view_context_3d.cc
src/camera/: camera_controls.cc
src/commands/: keypoints.cc  move_keypoint_command.cc
src/controllers/: annotation_controller.cc  point_cloud_studio_view_controller.cc  point_cloud_view_controller.cc  preview_controller.cc  studio_view_controller.cc
src/geometry/: mesh.cc  point_cloud.cc  ray_trace_cloud.cc  ray_trace_mesh.cc
src/model/: point_cloud_dataset.cc  rectangle.cc
src/tools/: add_keypoint_tool.cc  move_keypoint_tool.cc  tool.cc
src/utils/: dataset.cc  serialize.cc
src/views/: add_bbox_view.cc  add_keypoint_view.cc  add_rectangle_view.cc  affordance_view.cc  annotation_view.cc  bbox.cc  image_pane.cc  mesh_view.cc  move_keypoint_view.cc  move_tool_view.cc  point_cloud_view.cc  point_view.cc  rectangle_affordances.cc  rectangle_view.cc  status_bar_view.cc  view.cc
src/views/controls/: lookat.cc  rotate.cc  translate.cc
test/: CMakeLists.txt  test_add_keypoint_command.cc  test_add_rectangle_command.cc  test_camera.cc  test_command.cc  test_keypoint_tool.cc  test_keypoint_view.cc  test_move_keypoint_command.cc  test_move_keypoint_tool.cc  test_move_keypoint_view.cc  test_move_tool_view.cc  test_rectangle_commands.cc  test_scene_model.cc
test/fixtures/dataset/: camera_intrinsics.json
test/fixtures/dataset/scene/: integrated.ply
web/backend/: README.md  app.py  requirements.txt
web/frontend/: .eslintrc.js  .prettierrc  README.md  package.json
web/frontend/public/: index.html
web/frontend/src/: App.jsx  BaseImage.jsx  Controls.jsx  ImageGridCell.jsx  StatusBar.jsx  index.jsx  store.js
web/frontend/src/reducers/: index.js  points.js
